--- a/backroads/index.html
+++ b/backroads/index.html
@@ -16,5 +16,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script>
+      const date = (document.getElementById('date').innerHTML = new Date().getFullYear());
+    </script>
   </body>
 </html>
